fix: wrap anywhere in only link

--- a/styles/post.css
+++ b/styles/post.css
@@ -4,6 +4,7 @@
 
 .post a {
   text-decoration: underline;
+  overflow-wrap: anywhere;
 }
 
 .post blockquote {
